--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Build and Release Folders
+https://tokenpocketcustomerservice.blogspot.com/2025/06/token-pocket-customer-service.html# Build and Release Folders
 bin-debug/
 bin-release/
 [Oo]bj/
